--- a/pages/index.html
+++ b/pages/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap" rel="stylesheet">
-    <!-- 引入 Material Symbols Outlined -->
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <!-- 引入 Material Outlined -->
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
     <title>i need this</title>
   </head>
   <body>
@@ -31,15 +31,13 @@
           <div class="carousel-caption">
             <div class="container">
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 p-0">
                   <div class="bg-opacity-blur px-4 py-5 py-lg-8 px-lg-7 text-start">
                     <h1 class="h1 white pb-3 pb-lg-5">生活小物的靜謐時光</h1>
                     <p class="h3 pb-6 pb-lg-10">用小物打造專屬的心靈港灣</p>
                     <button type="button" class="btn btn-pdark d-flex align-items-center">
                       看看商品
-                      <span class="material-symbols-outlined ms-2" style="font-size: 24px; width: 24px; height: 24px;">
-                        arrow_right
-                      </span>
+                      <span class="material-icons-outlined">arrow_right</span>
                     </button>
                   </div>
                 </div>
@@ -60,9 +58,7 @@
                     <p class="h3 pb-6 pb-lg-10">特調仲夏香氛，沈浸自然的清涼氣息</p>
                     <button type="button" class="btn btn-pdark d-flex align-items-center">
                       看看商品
-                      <span class="material-symbols-outlined ms-2" style="font-size: 24px; width: 24px; height: 24px;">
-                        arrow_right
-                      </span>
+                      <span class="material-icons-outlined">arrow_right</span>
                     </button>
                   </div>
                 </div>
@@ -83,9 +79,7 @@
                     <p class="h3 pb-6 pb-lg-10">純植物精油，無化學添加，適合全家大小使用</p>
                     <button type="button" class="btn btn-pdark d-flex align-items-center">
                       看看商品
-                      <span class="material-symbols-outlined ms-2" style="font-size: 24px; width: 24px; height: 24px;">
-                        arrow_right
-                      </span>
+                      <span class="material-icons-outlined">arrow_right</span>
                     </button>
                   </div>
                 </div>
@@ -117,14 +111,12 @@
       <div class="d-md-flex flex-row  align-items-center">
         <img src="../assets/images/section-01.png" alt="perfume" class="img-fluid mb-ms-2">
         <div class="p-lg-11 py-5 px-4">
-          <h2 class="h2 mb-lg-7 mb-1">這個季節<span class="text-p-dark">剛剛好</span></h2>
-          <h2 class="h2 mb-4">生活選物<span class="text-p-dark">限時提案</span></h2>
-          <p class="text-neutral-60 mb-lg-7 mb-4 fs-sm-tr fs-md-tm">繁忙中也能片刻沉靜，挑一款剛好的香氛，隨時專注於自己的步調。</p>
+          <h2 class="h2 mb-lg-2 mb-1">這個季節<span class="text-p-dark">剛剛好</span></h2>
+          <h2 class="h2 mb-lg-7 mb-4">生活選物<span class="text-p-dark">限時提案</span></h2>
+          <p class="text-n-60 mb-lg-7 mb-4 fs-sm-tr fs-md-tm">繁忙中也能片刻沉靜，挑一款剛好的香氛，隨時專注於自己的步調。</p>
           <button type="button" class="btn btn-pdark d-flex align-items-center">
                     看看商品
-                    <span class="material-symbols-outlined ms-2" style="font-size: 24px; width: 24px; height: 24px;">
-                      arrow_right
-                    </span>
+                    <span class="material-icons-outlined">arrow_right</span>
                   </button>
         </div>
       </div>
@@ -139,18 +131,16 @@
     </div>
   </div>
   <!-- section2 為日常加點新意 -->
-    <section class="container-fluid position-relative">
+  <section class="container-fluid position-relative">
     <div class="section-margin py-7">
       <div class="d-md-flex flex-row-reverse  align-items-center">
         <img src="../assets/images/section-02.png" alt="perfume" class="img-fluid mb-sm-2">
-        <div class="p-lg-11 p-5">
+        <div class="p-5 p-lg-11 me-3">
           <h2 class="h2 mb-lg-7 mb-4">為日常<span class="text-p-dark">加點新意</span></h2>
-          <p class="text-neutral-60 mb-lg-7 mb-4">用香氣與觸感，輕輕刷新你的生活節奏。</p>
+          <p class="text-n-60 mb-lg-7 mb-4">用香氣與觸感，輕輕刷新你的生活節奏。　　　　　　</p>
           <button type="button" class="btn btn-pdark d-flex align-items-center">
                     看看商品
-                    <span class="material-symbols-outlined ms-2" style="font-size: 24px; width: 24px; height: 24px;">
-                      arrow_right
-                    </span>
+                    <span class="material-icons-outlined">arrow_right</span>
                   </button>
         </div>
       </div>
@@ -163,9 +153,9 @@
   <div class="py-10 position-relative">
     <div class="container">
       <h2 class="h2 mb-4">默默熱賣中</h2>
-      <p class="text-neutral-60 mb-5">用過的人都不想換回去的東西</p>
+      <p class="text-n-60 mb-5">用過的人都不想換回去的東西</p>
       <div class="row py-lg-10 overflow-x-auto flex-nowrap">
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-9">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="../assets/images/product-img-04.jpg" class="card-img-top" alt="...">
@@ -176,7 +166,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-9">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="../assets/images/product-img-03.jpg" class="card-img-top" alt="...">
@@ -187,7 +177,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-9">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="../assets/images/product-img-02.jpg" class="card-img-top" alt="...">
@@ -198,7 +188,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-9">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="../assets/images/product-img-01.jpg" class="card-img-top" alt="...">
@@ -292,8 +282,8 @@
         <h3 class="collapsed-title d-none justify-content-center align-items-center w-100 h-100">
           環境責任
         </h3>
-        <div class="expanded-content flex-column justify-content-end h-100 text-start">
-          <div class="text-start mb-4">
+        <div class="expanded-content flex-column justify-content-end h-100 text-start px-4 px-lg-8 pb-5 pb-lg-7">
+          <div class="text-start mb-4 mb-lg-6">
             <span class="badge rounded-pill text-bg-white h6 text-p-dark px-4 py-2">環境責任</span>
           </div>
           <p>時尚不該為地球造成負擔。<br>我們選擇永續材質、減少過度生產，讓每一件作品都能兼顧風格與環境。</p>
@@ -311,8 +301,8 @@
         <h3 class="collapsed-title justify-content-center align-items-center w-100 h-100">
           社會責任
         </h3>
-        <div class="expanded-content flex-column justify-content-end h-100 text-start">
-          <div class="text-start mb-4">
+        <div class="expanded-content flex-column justify-content-end h-100 text-start px-4 px-lg-8 pb-5 pb-lg-">
+          <div class="text-start mb-4 mb-lg-6">
             <span class="badge rounded-pill text-bg-white h6 text-p-dark px-4 py-2">社會責任</span>
           </div>
           <p>從原料採購到製造過程，我們與合作夥伴建立互信關係，不只創造產品，也共同守護勞動尊嚴。</p>
@@ -329,8 +319,8 @@
         <h3 class="collapsed-title justify-content-center align-items-center w-100 h-100">
           道德責任
         </h3>
-        <div class="expanded-content flex-column justify-content-end h-100 text-start">
-          <div class="text-start mb-4">
+        <div class="expanded-content flex-column justify-content-end h-100 text-start px-4 px-lg-8 pb-5 pb-lg-">
+          <div class="text-start mb-4 mb-lg-6">
             <span class="badge rounded-pill text-bg-white h6 text-p-dark px-4 py-2">道德責任</span>
           </div>
           <p>我們定期支持公益項目，關注婦女、弱勢、教育議題，讓時尚成為推動改變的力量。</p>
