Style: 首頁連結更正

--- a/pages/story.html
+++ b/pages/story.html
@@ -30,7 +30,11 @@
       <div class="container">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">首頁</a></li>
+            <li class="breadcrumb-item">
+              <a href="http://localhost:5173/I-need-this/pages/index.html"
+                >首頁</a
+              >
+            </li>
             <li class="breadcrumb-item active" aria-current="page">品牌介紹</li>
           </ol>
         </nav>
