--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -8,19 +8,20 @@
     <link rel="stylesheet" href="/CSS/css reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../assets/scss/pages/_checkout.scss">
 </head>
 <body>
   <!-- 頁首 -->
   <nav class="container mb-72 text-sans">
     <div class="d-flex align-center justify-between">
-      <a href="index.html" class="py-16 "><img src="/assets/img/logo_on light.svg" alt="logo"></a>
+      <a href="index.html" class="py-16 "><img src="../assets/images/svg/logo_on light.svg" alt="logo"></a>
       <ul class="d-flex align-center">   
         <li class="px-24 py-20"><div class="search-bar">
           <input type="text" placeholder="輸入商品名稱" class="search-input">
-          <button class="search-button"><img src="/assets/img/Search.svg" alt="搜尋符號"></button></li>
+          <button class="search-button"><img src="../assets/images/svg/Search.svg" alt="搜尋符號"></button></li>
         <li><a href="#" class="p-24">品牌介紹</a></li>
         <li><a href="#" class="p-24">所有商品</a></li>
-        <li><img src="/assets/img/Cart.svg" class="p-24" alt="購物車"></a></li>
+        <li><img src="../assets/images/svg/Cart.svg" class="p-24" alt="購物車"></a></li>
         <li><a href="" class="d-flex align-center justify-end px-32 py-32 bg-primary-dark tm login">註冊/登入</a></li>
         </ul>
     </div>
@@ -54,9 +55,9 @@
 <!-- 購物進度 -->
     <div class="d-flex justify-center ">
       <ul class="container row progress-label">
-        <li class="col-4 d-flex align-center flex-column lined-process py-16 text-primary-dark "><img src="/assets/img/Frame 1.svg" alt="1" class="icon-md-pd"><p class="h5 text-primary-dark">查看購物車</p></li>
-        <li class="col-4 d-flex align-center flex-column b-lined py-16 h5 text-neuture-40"><img src="/assets/img/Frame 2.svg" alt="2" class="icon-md-pd"><p>填寫資料</p></li>
-        <li class="col-4 d-flex align-center flex-column b-lined py-16 h5 text-neuture-40"><img src="/assets/img/Frame 3.svg" alt="3" class="icon-md-pd"><p>訂單確認</p></li>
+        <li class="col-4 d-flex align-center flex-column lined-process py-16 text-primary-dark "><img src="../assets/images/svg/Frame 1.svg" alt="1" class="icon-md-pd"><p class="h5 text-primary-dark">查看購物車</p></li>
+        <li class="col-4 d-flex align-center flex-column b-lined py-16 h5 text-neuture-40"><img src="../assets/images/svg/Frame 2.svg" alt="2" class="icon-md-pd"><p>填寫資料</p></li>
+        <li class="col-4 d-flex align-center flex-column b-lined py-16 h5 text-neuture-40"><img src="../assets/images/svg/Frame 3.svg" alt="3" class="icon-md-pd"><p>訂單確認</p></li>
       </ul>
     </div>
     <!-- 購物車清單 -->
@@ -75,7 +76,7 @@
           <span class="container lined-product ">
             <div class="d-flex align-center grid-product col-cart col-cart2">
               <div class="d-flex align-center product-pd">
-                <img src="/assets/img/琥珀之夜.jpg" alt="琥珀之夜">
+                <img src="../assets/images/琥珀之夜.jpg" alt="琥珀之夜">
                 <div class="p-info ">
                   <div>
                     <P class="py-4 tm">琥珀之夜</P>
@@ -86,9 +87,9 @@
               </div>
               <div class="h6 text-neuture-80 p-price">NT$ 399</div>
               <div class="quantity-control quantity-btn col-mr-56 media-mb-16">
-                <button class="minus-btn icon-center p-16"><img src="/assets/img/Remove.svg" alt="減號"></button>
+                <button class="minus-btn icon-center p-16"><img src="../assets/images/svg/Remove.svg" alt="減號"></button>
                 <input type="text" value="1" class="quantity-input tm">
-                <button class="plus-btn icon-center p-16"><img src="/assets/img/Add.svg" alt="加號"></button>
+                <button class="plus-btn icon-center p-16"><img src="../assets/images/svg/Add.svg" alt="加號"></button>
               </div>
               <div class="d-flex justify-space-between h6 media-mb-16"><div class="hide">總計</div>NT$ 1,197</div>
             </div>
@@ -97,7 +98,7 @@
           <span class="container lined-product mb-56">
             <div class="d-flex align-center grid-product col-cart col-cart2 mb-56 media-product">
               <div class="d-flex align-center product-pd">
-                <img src="/assets/img/靜夜語.jpg" alt="靜夜語">
+                <img src="../assets/images/靜夜語.jpg" alt="靜夜語">
                 <div class="p-info">
                   <P class="py-4 tm">靜夜語</P>
                   <P class="h5 p-element">助眠放鬆精油</P>
@@ -106,9 +107,9 @@
               </div>
               <div class="h6 text-neuture-80 p-price">NT$ 599</div>
               <div class="quantity-control quantity-btn col-mr-56 media-mb-16">
-                <button class="minus-btn icon-center p-16"><img src="/assets/img/Remove.svg" alt="減號"></button>
+                <button class="minus-btn icon-center p-16"><img src="../assets/images/svg/Remove.svg" alt="減號"></button>
                 <input type="text" value="1" class="quantity-input tm">
-                <button class="plus-btn icon-center p-16"><img src="/assets/img/Add.svg" alt="加號"></button>
+                <button class="plus-btn icon-center p-16"><img src="../assets/images/svg/Add.svg" alt="加號"></button>
               </div>
               <div class="d-flex justify-space-between h6 media-mb-16">
                 <div class="hide">總計</div>
@@ -161,8 +162,8 @@
     </div>
     <!-- 確認結帳按鈕 -->
     <div class="d-flex justify-end tm mb-72">
-      <button type="button" class="p-16 back-step d-flex align-center btn-link text-neuture-40 "><img src="/assets/img/Arrow left.svg" alt="回上一步" class="arrow-img">回上一步</button>
-      <button type="button" class="p-16 btn-link d-flex align-center text-neuture-0 bg-primary-dark">下一步：填寫資料<img src="/assets/img/Arrow right.svg" alt="下一步：填寫資料" class="pl-8"></button>
+      <button type="button" class="p-16 back-step d-flex align-center btn-link text-neuture-40 "><img src="../assets/images/svg/Arrow left.svg" alt="回上一步" class="arrow-img">回上一步</button>
+      <button type="button" class="p-16 btn-link d-flex align-center text-neuture-0 bg-primary-dark">下一步：填寫資料<img src="../assets/images/svg/Arrow right.svg" alt="下一步：填寫資料" class="pl-8"></button>
     </div>
   </main>
   <footer></footer>
