更新品牌介紹頁面

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,13 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap" rel="stylesheet">
-<<<<<<< HEAD
     <!-- 引入 Material Outlined -->
     <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
-=======
-    <!-- 引入 Material Symbols Outlined -->
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
->>>>>>> e5b2e9966abc661c92d2e64aba4d8a9429fa3474
     <title>i need this</title>
   </head>
   <body>
@@ -36,23 +31,13 @@
           <div class="carousel-caption">
             <div class="container">
               <div class="row">
-<<<<<<< HEAD
                 <div class="col-lg-6 p-0">
-=======
-                <div class="col-lg-6">
->>>>>>> e5b2e9966abc661c92d2e64aba4d8a9429fa3474
                   <div class="bg-opacity-blur px-4 py-5 py-lg-8 px-lg-7 text-start">
                     <h1 class="h1 white pb-3 pb-lg-5">生活小物的靜謐時光</h1>
                     <p class="h3 pb-6 pb-lg-10">用小物打造專屬的心靈港灣</p>
                     <button type="button" class="btn btn-pdark d-flex align-items-center">
                       看看商品
-<<<<<<< HEAD
                       <span class="material-icons-outlined">arrow_right</span>
-=======
-                      <span class="material-symbols-outlined ms-2" style="font-size: 24px; width: 24px; height: 24px;">
-                        arrow_right
-                      </span>
->>>>>>> e5b2e9966abc661c92d2e64aba4d8a9429fa3474
                     </button>
                   </div>
                 </div>
@@ -230,7 +215,7 @@
         <div class="inner-border"></div>
         <!-- 遮罩標題按鈕 -->
         <div class="overlay d-flex flex-column justify-content-center align-items-center ">
-          <h3 class="title-box h4 pb-6">日常療癒・文青系</h3>
+          <h3 class="title-box h4 pb-6 text-white">日常療癒・文青系</h3>
           <button class="btn btn-white">看看商品</button>
         </div>
       </div>
@@ -244,7 +229,7 @@
         <div class="inner-border"></div>
         <!-- 遮罩標題按鈕 -->
         <div class="overlay d-flex flex-column justify-content-center align-items-center">
-          <h3 class="title-box h4 pb-6">俐落品味・都會控</h3>
+          <h3 class="title-box h4 pb-6 text-white">俐落品味・都會控</h3>
           <button class="btn btn-white">看看商品</button>
         </div>
       </div>
@@ -258,7 +243,7 @@
         <div class="inner-border"></div>
         <!-- 遮罩標題按鈕 -->
         <div class="overlay d-flex flex-column justify-content-center align-items-center">
-          <h3 class="title-box h4 pb-6">純粹自然・健康派</h3>
+          <h3 class="title-box h4 pb-6 text-white">純粹自然・健康派</h3>
           <button class="btn btn-white">看看商品</button>
         </div>
       </div>
@@ -272,7 +257,7 @@
         <div class="inner-border"></div>
         <!-- 遮罩標題按鈕 -->
         <div class="overlay d-flex flex-column justify-content-center align-items-center">
-          <h3 class="title-box h4 pb-6">溫暖幸福・家居族</h3>
+          <h3 class="title-box h4 pb-6 text-white">溫暖幸福・家居族</h3>
           <button class="btn btn-white">看看商品</button>
         </div>
       </div>
