--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>about</title>
-    <script type="module" crossorigin src="/I-need-this/assets/main-BN8E7l-T.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-CJ-3P2D2.css">
+    <script type="module" crossorigin src="/I-need-this/assets/main-CoLmHCXj.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-wEiAUA9u.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light border-bottom">
@@ -64,7 +64,7 @@
                             
                         </li> -->
       <li class="nav-item d-none d-sm-none d-md-none d-lg-block">
-        <a class="nav-link text-t-m brand-text" href="story.html">品牌介紹</a>
+        <a class="nav-link text-t-m brand-text" href="brand.html">品牌介紹</a>
       </li>
       <li class="nav-item d-none d-sm-none d-md-none d-lg-block">
         <a class="nav-link text-t-m" href="product.html">所有商品</a>
