--- a/product.html
+++ b/product.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../assets/css/all.css">
     <link rel="stylesheet" href="../assets/css/product.css">
-    <script type="module" crossorigin src="/I-need-this/assets/main-BN8E7l-T.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-CJ-3P2D2.css">
+    <script type="module" crossorigin src="/I-need-this/assets/main-CoLmHCXj.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-wEiAUA9u.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light border-bottom">
@@ -69,7 +69,7 @@
                             
                         </li> -->
       <li class="nav-item d-none d-sm-none d-md-none d-lg-block">
-        <a class="nav-link text-t-m brand-text" href="story.html">品牌介紹</a>
+        <a class="nav-link text-t-m brand-text" href="brand.html">品牌介紹</a>
       </li>
       <li class="nav-item d-none d-sm-none d-md-none d-lg-block">
         <a class="nav-link text-t-m" href="product.html">所有商品</a>
