更新header+品牌故事樣式連結

--- a/pages/brand.html
+++ b/pages/brand.html
@@ -23,6 +23,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <!-- 引入 Material Outlined -->
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
   </head>
   <body>
     <%- include('./layout/header.ejs') %>
