間距調整+header調整

--- a/pages/index.html
+++ b/pages/index.html
@@ -160,7 +160,7 @@
             <div class="card border-0">
               <img src="../assets/images/product-img-04.jpg" class="card-img-top" alt="...">
               <div class="card-body text-center">
-                <h5 class="h5 mb-2">香氛蠟燭</h5>
+                <h5 class="h5 mb-2 text-n-80">香氛蠟燭</h5>
                 <p class="card-text text-p-dark">「不只是香氣，還是生活裡的儀式感。」</p>
               </div>
             </div>
@@ -171,7 +171,7 @@
             <div class="card border-0">
               <img src="../assets/images/product-img-03.jpg" class="card-img-top" alt="...">
               <div class="card-body text-center">
-                <h5 class="h5 mb-2">擴香瓶</h5>
+                <h5 class="h5 mb-2 text-n-80">擴香瓶</h5>
                 <p class="card-text text-p-dark">「用點燃，就能為家帶來溫柔香氣。」不</p>
               </div>
             </div>
@@ -182,7 +182,7 @@
             <div class="card border-0">
               <img src="../assets/images/product-img-02.jpg" class="card-img-top" alt="...">
               <div class="card-body text-center">
-                <h5 class="h5 mb-2">手工皂套組</h5>
+                <h5 class="h5 mb-2 text-n-80">手工皂套組</h5>
                 <p class="card-text text-p-dark">「一塊手工皂，洗去一天的疲憊。」</p>
               </div>
             </div>
@@ -193,7 +193,7 @@
             <div class="card border-0">
               <img src="../assets/images/product-img-01.jpg" class="card-img-top" alt="...">
               <div class="card-body text-center">
-                <h5 class="h5 mb-2">精油薰香（兩入）</h5>
+                <h5 class="h5 mb-2 text-n-80">精油薰香（兩入）</h5>
                 <p class="card-text text-p-dark">「空氣裡的療癒魔法。」</p>
               </div>
             </div>
