--- a/about.html
+++ b/about.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>about</title>
-    <script type="module" crossorigin src="/I-need-this/assets/main-Dn1QVl12.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-p-S_U4vW.css">
+    <script type="module" crossorigin src="/I-need-this/assets/main-C132ijFN.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-C7MUPoyJ.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg py-0">
   <div class="container d-flex align-items-center">
     <!-- Logo -->
     <a class="navbar-brand py-4" href="index.html">
-      <img src="/I-need-this/assets/logo_on%20light-CbsW53Vv.svg" alt="logo">
+      <img src="/I-need-this/assets/logo_on%20light-BOaolgl4.svg" alt="logo">
     </a>
 
     <!-- 右側內容 -->
@@ -144,7 +144,7 @@ menuToggle.addEventListener("click", () => {
             class="d-lg-flex align-items-center mb-3 link-dark text-decoration-none pt-10 mb-8"
           >
             <img
-              src="/I-need-this/assets/logo_on%20dark-mQi5lKma.svg"
+              src="/I-need-this/assets/logo_on%20dark-CkVlHNz7.svg"
               alt="logo_on dark"
               class="d-inline-block align-text-top"
             />
@@ -231,6 +231,6 @@ menuToggle.addEventListener("click", () => {
     </p>
   </div>
 </footer>
-
+
   </body>
 </html>
