--- a/pages/product.html
+++ b/pages/product.html
@@ -109,7 +109,7 @@
                 <div class="row row-cols-2 row-cols-lg-3 g-4 ">
                     <div class="col">
                         <div class="card h-100 border-0">
-                            <a href="" class="link-dark text-decoration-none">
+                            <a href="product-detail.html" class="link-dark text-decoration-none">
 
                                 <img src="https://github.com/a50134/project/blob/main/img/oil1.jpg?raw=true" class="card-img-top" alt="oil1">
                                 <div class="card-body">
