--- a/product.html
+++ b/product.html
@@ -8,10 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../assets/css/all.css">
+    <link rel="stylesheet" href="../assets/css/product.css">
     <!-- 引入 Material Outlined -->
     <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
-    <script type="module" crossorigin src="/I-need-this/assets/main-BWYBAg9V.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-DDRaGYPz.css">
+    <script type="module" crossorigin src="/I-need-this/assets/main-DTbH12p-.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-DXhsAXVH.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg py-0">
@@ -223,7 +225,7 @@ menuToggle.addEventListener("click", () => {
                 <div class="row row-cols-2 row-cols-lg-3 g-4 ">
                     <div class="col">
                         <div class="card h-100 border-0">
-                            <a href="" class="link-dark text-decoration-none">
+                            <a href="product-detail.html" class="link-dark text-decoration-none">
 
                                 <img src="https://github.com/a50134/project/blob/main/img/oil1.jpg?raw=true" class="card-img-top" alt="oil1">
                                 <div class="card-body">
