--- a/product-detail.html
+++ b/product-detail.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ZH-Hant-TW">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap" rel="stylesheet">
     <!-- 引入 Material Outlined -->
     <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./scss/_all.scss">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>商品細節｜I need this</title>
-    <script type="module" crossorigin src="/I-need-this/assets/main-C2QnM93T.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-C39J7Cho.css">
+    <title>商品細節｜I need this</title>
+    <script type="module" crossorigin src="/I-need-this/assets/main-CsRIr0Hm.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-BglC5h53.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg py-0">
