--- a/pages/brand.html
+++ b/pages/brand.html
@@ -24,7 +24,10 @@
       crossorigin="anonymous"
     />
     <!-- 引入 Material Outlined -->
-    <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <%- include('./layout/header.ejs') %>
