--- a/brand.html
+++ b/brand.html
@@ -24,8 +24,11 @@
       crossorigin="anonymous"
     />
     <!-- 引入 Material Outlined -->
-    <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
-    <script type="module" crossorigin src="/I-need-this/assets/main-CsRIr0Hm.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp"
+      rel="stylesheet"
+    />
+    <script type="module" crossorigin src="/I-need-this/assets/main-D6oXBZm7.js"></script>
     <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-BglC5h53.css">
   </head>
   <body>
