--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- 引入 Material Outlined -->
     <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
     <title>i need this</title>
-    <script type="module" crossorigin src="/I-need-this/assets/main-C5014jma.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-DpgmQyaw.css">
+    <script type="module" crossorigin src="/I-need-this/assets/main-DbnXuPS0.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-DtUfFZsd.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg py-0">
@@ -32,7 +32,7 @@
       <ul class="navbar-nav d-none d-lg-flex align-items-center mb-0">
         <li class="nav-item"><a class="nav-link px-2 m-6 text-n-80" href="brand.html">品牌介紹</a></li>
         <li class="nav-item"><a class="nav-link px-2 m-6 text-n-80" href="product.html">所有商品</a></li>
-        <li class="nav-item"><a class="nav-link p-2 m-6 text-n-80" href="product.html"><span class="material-icons">shopping_cart</span></a></li>
+        <li class="nav-item"><a class="nav-link p-2 m-6 text-n-80" href="checkout.html"><span class="material-icons">shopping_cart</span></a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle btn-pdark px-6 py-7" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             註冊 / 登入
