--- a/checkout.html
+++ b/checkout.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>結帳畫面</title>
+    <link rel="stylesheet" href="/CSS/all.css">
+    <link rel="stylesheet" href="/CSS/css reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
-  <script type="module" crossorigin src="/I-need-this/assets/main-DbnXuPS0.js"></script>
-  <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-DtUfFZsd.css">
-  <link rel="stylesheet" crossorigin href="/I-need-this/assets/checkout-Dlu92jl3.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../assets/css/pages/checkout.css"> 
+  <script type="module" crossorigin src="/I-need-this/assets/main-D8UL6ObJ.js"></script>
+  <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-LH9l7AXJ.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg py-0">
@@ -128,20 +129,6 @@ menuToggle.addEventListener("click", () => {
 });
 </script>
   <!-- 頁首 -->
-  <!-- <nav class="container mb-72 text-sans">
-    <div class="d-flex align-center justify-between">
-      <a href="index.html" class="py-16 "><img src="../assets/images/svg/logo_on light.svg" alt="logo"></a>
-      <ul class="d-flex align-center ul">   
-        <li class="px-24 py-20"><div class="search-bar">
-          <input type="text" placeholder="輸入商品名稱" class="search-input">
-          <button class="search-button"><img src="../assets/images/svg/Search.svg" alt="搜尋符號"></button></li>
-        <li><a href="#" class="p-24">品牌介紹</a></li>
-        <li><a href="#" class="p-24">所有商品</a></li>
-        <li><img src="../assets/images/svg/Cart.svg" class="p-24" alt="購物車"></a></li>
-        <li><a href="" class="d-flex align-center justify-end px-32 py-32 bg-primary-dark tm login">註冊/登入</a></li>
-        </ul>
-    </div>
-  </nav> -->
   <main class="container px-12 text-sans">
     <script>
       document.addEventListener('DOMContentLoaded', () => {
