--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/CSS/css reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="../assets/scss/pages/checkout.css"> 
 </head>
 <body>
